Revert "Quitando carpeta imagenes en logicaJS"
This reverts commit b232f08ce59bcd9ed42f600b17d8bda196d8fcca.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
     <title>Encriptador</title>
 </head>
 <body>
     <header>
-        <img src="imagenes/Logo.png" alt="LogoAlura" class="logo">
+        <!-- Acá va el logo de alura -->
     </header>
     <main>
         <div class="contenedor">
@@ -18,7 +17,7 @@
                 <textarea class="texto-encript" placeholder="Ingrese el texto aquí" id="encriptar"></textarea>
                 <div class="mensaje" id="mensaje">
                     <div id="mensaje-interno">
-                        <img src="imagenes/Muñeco.png" alt="" class="imagen-mensaje">
+                        <!-- Acá va imagen del mensaje de la barra lateral derecha -->
                         <p class="principal" id="imagen-mensaje">Ningún mensaje fue encontrado</p>
                         <p class="secundario" id="imagen-mensaje">Ingresa el texto que desees encriptar o desencriptar</p>
                     </div>
@@ -27,7 +26,7 @@
                 
                 
                 <div class="contenedor-botones">
-                    <p class="texto-info"><img src="imagenes/info.png" alt="info" class="info">Solo letras minúsculas y sin acentos</p>
+                    <!-- Aquí va una pequeña imagen que hace referencia a informacion adicional -->
                     <div class="botones">
                         <input type="button" value="Encriptar" class="encriptar" id="accionEncriptar">
                     <input type="button" value="Desencriptar" class="desencriptar" id="accionDesencriptar">
