--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                 </div>
             </form>
             <div class="mensaje" id="mensaje">
-                <div id="mensaje-interno">
+                <div id="mensaje-interno" class="mensaje-interno">
                     <img src="imagenes/Muñeco.png" alt="" class="imagen-mensaje">
                     <p class="principal">Ningún mensaje fue encontrado</p>
                     <p class="secundario">Ingresa el texto que desees encriptar o desencriptar</p>
-                </div>    
+                    
+                </div>
+                <input type="button" value="Copiar" class="copiar" id="copiar">
             </div>   
         </div>
     </main>
